--- a/.github/workflows/Registry.yml
+++ b/.github/workflows/Registry.yml
@@ -1,12 +1,15 @@
 name: Update registry
+
 env:
   target_repository: "https://${{ secrets.REGISTRATOR_TOKEN }}@github.com/${{ github.repository }}.git"
   public_registry: "https://${{ secrets.REGISTRATOR_TOKEN }}@github.com/bhftbootcamp/Orange.git"
+
 on:
   push:
     branches:
       - master
   workflow_dispatch:
+    
 jobs:
   registry:
     name: Update registry
@@ -20,7 +23,7 @@ jobs:
       - name: Add registry to environment
         run: |
           julia -e '
-            using Pkg;
+            using Pkg
             Pkg.update()
             Pkg.Registry.add(Pkg.RegistrySpec(; url = "${{ env.public_registry }}"))
             Pkg.Registry.update()
@@ -35,24 +38,20 @@ jobs:
             using LocalRegistry
             using TOML
     
-            name = first(split(basename("${{ env.target_repository }}"), "."))
-    
-            LocalRegistry.register(
-              name,
-              registry = "${{ env.public_registry }}",
-              commit = true, push = true,
-              ignore_reregistration = true,
-            )
-  
-            path = joinpath(DEPOT_PATH[1], "dev", name)
+            pkg_name = first(split(basename("${{ env.target_repository }}"), "."))
+            path = joinpath(DEPOT_PATH[1], "dev", pkg_name)
             toml = TOML.parsefile(joinpath(path, "Project.toml"))
             version = VersionNumber(toml["version"])
+    
+            LocalRegistry.register(
+                pkg_name,
+                registry = "${{ env.public_registry }}",
+                commit = true,
+                push = true,
+                ignore_reregistration = true,
+            )
   
             cd(path)
             run(`git tag -f "v$version"`)
             run(`git push --force origin "v$version"`)
             '
-        shell: bash
-        env:
-          REGISTRY_URL: 
-          REPOSITORY_URL: 
