--- a/.github/workflows/Registry.yml
+++ b/.github/workflows/Registry.yml
@@ -53,8 +53,8 @@ jobs:
             package_name = package_name[1]
 
             package_dir = joinpath(DEPOT_PATH[1], "dev", package_name)
-            toml = TOML.parsefile(joinpath(package_dir, "Project.toml"))
-            version = VersionNumber(toml["version"])
+            project_toml = TOML.parsefile(joinpath(package_dir, "Project.toml"))
+            version = VersionNumber(project_toml["version"])
     
             LocalRegistry.register(
                 package_name,
@@ -67,4 +67,3 @@ jobs:
             run(Cmd(`git tag -f "v$version"`, dir = package_dir))
             run(Cmd(`git push --force origin "v$version"`, dir = package_dir))
             '
-            
