--- a/.github/workflows/CompatHelper.yml
+++ b/.github/workflows/CompatHelper.yml
@@ -1,7 +1,7 @@
 name: CompatHelper
 
 env:
-  public_registry: "https://github.com/bhftbootcamp/Orange.git"
+  registry_path: bhftbootcamp/Orange
 
 on:
   schedule:
@@ -23,7 +23,7 @@ jobs:
           julia -e '
             using Pkg
             Pkg.update()
-            Pkg.Registry.add(Pkg.RegistrySpec(; url = "${{ env.public_registry }}"))
+            Pkg.Registry.add(Pkg.RegistrySpec(; url = "https://github.com/${{ env.registry_path }}.git"))
             Pkg.Registry.update()
             '
       - name: Configure CompatHelper
