--- a/.github/workflows/Coverage.yml
+++ b/.github/workflows/Coverage.yml
@@ -1,7 +1,7 @@
 name: CI
 
 env:
-  public_registry: "https://github.com/bhftbootcamp/Orange.git"
+  registry_path: bhftbootcamp/Orange
 
 on:
   push:
@@ -45,7 +45,7 @@ jobs:
           julia -e '
             using Pkg;
             Pkg.update()
-            Pkg.Registry.add(Pkg.RegistrySpec(; url = "${{ env.public_registry }}"))
+            Pkg.Registry.add(Pkg.RegistrySpec(; url = "https://github.com/${{ env.registry_path }}.git"))
             Pkg.Registry.update()
             '
       - uses: julia-actions/julia-buildpkg@v1
