--- a/.github/workflows/Registry.yml
+++ b/.github/workflows/Registry.yml
@@ -1,8 +1,8 @@
 name: Update registry
 
 env:
-  target_repository: "https://${{ secrets.REGISTRATOR_TOKEN }}@github.com/${{ github.repository }}.git"
-  public_registry: "https://${{ secrets.REGISTRATOR_TOKEN }}@github.com/bhftbootcamp/Orange.git"
+    repository_path: ${{ github.repository }}
+    registry_path: "bhftbootcamp/Orange"
 
 on:
   push:
@@ -33,7 +33,7 @@ jobs:
           julia -e '
             using Pkg
             Pkg.update()
-            Pkg.Registry.add(Pkg.RegistrySpec(; url = "${{ env.public_registry }}"))
+            Pkg.Registry.add(Pkg.RegistrySpec(; url = "https://${{ secrets.REGISTRATOR_TOKEN }}@github.com/${{ env.registry_path }}.git"))
             Pkg.Registry.update()
             '
       - name: Updating package version in registers
@@ -42,13 +42,13 @@ jobs:
             using Pkg
             
             Pkg.add("LocalRegistry")
-            Pkg.develop(url = "${{ env.target_repository }}")
+            Pkg.develop(url = "https://${{ secrets.REGISTRATOR_TOKEN }}@github.com/${{ github.repository }}.git")
 
             using LocalRegistry
             using TOML
     
-            package_name = match(r"^.*/(.*?)(\.jl)?(\.git)?$", "${{ env.target_repository }}")
-            package_name == nothing && error("Invalid package name: ${{ env.target_repository }}")
+            package_name = match(r"^.*/(.*?)(\.jl)?(\.git)?$", "${{ env.repository_path }}")
+            package_name == nothing && error("Invalid package name: ${{ env.repository_path }}")
             package_name = package_name[1]
 
             package_dir = joinpath(DEPOT_PATH[1], "dev", package_name)
@@ -57,12 +57,12 @@ jobs:
     
             LocalRegistry.register(
                 package_name,
-                registry = "${{ env.public_registry }}",
-                commit = true,
-                push = true,
+                repo = "https://github.com/${{ github.repository }}.git",
+                registry = "https://${{ secrets.REGISTRATOR_TOKEN }}@github.com/${{ env.registry_path }}.git",
                 ignore_reregistration = true,
             )
   
             run(Cmd(`git tag -f "v$version"`, dir = package_dir))
             run(Cmd(`git push --force origin "v$version"`, dir = package_dir))
             '
+            
